fixed leaked api key

--- a/playground/playground.ipynb
+++ b/playground/playground.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "OPENAI_API_KEY = \"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\""
+    "import os\n",
+    "\n",
+    "OPENAI_API_KEY = os.environ[\"OPENAI_API_KEY\"]"
    ]
   },
   {
@@ -29,40 +31,40 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "structure_query = \"\"\"\n",
-    "PREFIX cube: <https://cube.link/>\n",
-    "PREFIX sh: <http://www.w3.org/ns/shacl#>\n",
-    "PREFIX schema: <http://schema.org/>\n",
-    "PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
-    "PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
-    "PREFIX qudt: <http://qudt.org/schema/qudt/>\n",
+    "# structure_query = \"\"\"\n",
+    "# PREFIX cube: <https://cube.link/>\n",
+    "# PREFIX sh: <http://www.w3.org/ns/shacl#>\n",
+    "# PREFIX schema: <http://schema.org/>\n",
+    "# PREFIX rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#>\n",
+    "# PREFIX rdfs: <http://www.w3.org/2000/01/rdf-schema#>\n",
+    "# PREFIX qudt: <http://qudt.org/schema/qudt/>\n",
     "\n",
-    "DESCRIBE ?cube ?shape ?property ?list ?links ?values\n",
-    "WHERE {\n",
-    "  VALUES ?cube { <https://environment.ld.admin.ch/foen/ubd000502/4> }\n",
+    "# DESCRIBE ?cube ?shape ?property ?list ?links ?values\n",
+    "# WHERE {\n",
+    "#   VALUES ?cube { <https://environment.ld.admin.ch/foen/ubd000502/4> }\n",
     "  \n",
-    "  ?cube a cube:Cube ;\n",
-    "        cube:observationConstraint ?shape .\n",
+    "#   ?cube a cube:Cube ;\n",
+    "#         cube:observationConstraint ?shape .\n",
     "  \n",
-    "   ?shape a cube:Constraint;\n",
-    "         sh:property ?property .\n",
+    "#    ?shape a cube:Constraint;\n",
+    "#          sh:property ?property .\n",
     "\n",
-    "   ?property a cube:KeyDimension;\n",
-    "      sh:path ?dimension ;\n",
-    "      sh:in ?list .\n",
+    "#    ?property a cube:KeyDimension;\n",
+    "#       sh:path ?dimension ;\n",
+    "#       sh:in ?list .\n",
     "\n",
-    "  ?list rdf:rest*/rdf:rest ?links.\n",
-    "  ?list rdf:rest*/rdf:first ?values.\n",
-    "}\n",
-    "\"\"\"\n",
+    "#   ?list rdf:rest*/rdf:rest ?links.\n",
+    "#   ?list rdf:rest*/rdf:first ?values.\n",
+    "# }\n",
+    "# \"\"\"\n",
     "\n",
-    "from SPARQLWrapper import SPARQLWrapper\n",
+    "# from SPARQLWrapper import SPARQLWrapper\n",
     "\n",
-    "sparql = SPARQLWrapper(endpoint=\"https://ld.stadt-zuerich.ch/query\")\n",
-    "sparql.setQuery(structure_query)\n",
+    "# sparql = SPARQLWrapper(endpoint=\"https://ld.stadt-zuerich.ch/query\")\n",
+    "# sparql.setQuery(structure_query)\n",
     "\n",
-    "result = sparql.queryAndConvert()\n",
-    "cube_structure = result.serialize()"
+    "# result = sparql.queryAndConvert()\n",
+    "# cube_structure = result.serialize()"
    ]
   },
   {
@@ -71,79 +73,70 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(cube_structure)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from langchain.chat_models import ChatOpenAI\n",
-    "from langchain.prompts.chat import ChatPromptTemplate\n",
-    "from langchain.chains import LLMChain\n",
-    "from langchain.schema import HumanMessage\n",
+    "# from langchain.chat_models import ChatOpenAI\n",
+    "# from langchain.prompts.chat import ChatPromptTemplate\n",
+    "# from langchain.chains import LLMChain\n",
+    "# from langchain.schema import HumanMessage\n",
     "\n",
-    "chat_model = ChatOpenAI(openai_api_key=OPENAI_API_KEY, model=\"gpt-3.5-turbo-16k\", temperature=0.5)\n",
+    "# chat_model = ChatOpenAI(openai_api_key=OPENAI_API_KEY, model=\"gpt-3.5-turbo-16k\", temperature=0.5)\n",
     "\n",
-    "cube_description = \"\"\"\n",
-    "    Data cube:\n",
-    "    {rdf_cube}\n",
-    "    \"\"\"\n",
+    "# cube_description = \"\"\"\n",
+    "#     Data cube:\n",
+    "#     {rdf_cube}\n",
+    "#     \"\"\"\n",
     "\n",
-    "structure_description = \"\"\"\n",
-    "Structure of the cube:\n",
-    "{cube_structure}\n",
-    "\"\"\"\n",
+    "# structure_description = \"\"\"\n",
+    "# Structure of the cube:\n",
+    "# {cube_structure}\n",
+    "# \"\"\"\n",
     "\n",
-    "sample_description = \"\"\"\n",
-    "Sample result:\n",
-    "{sample_result}\n",
-    "\"\"\"\n",
+    "# sample_description = \"\"\"\n",
+    "# Sample result:\n",
+    "# {sample_result}\n",
+    "# \"\"\"\n",
     "\n",
-    "human_template = \"Give me query with prefixes for: {question}\"\n",
+    "# human_template = \"Give me query with prefixes for: {question}\"\n",
     "\n",
-    "chat_prompt = ChatPromptTemplate.from_messages([\n",
-    "    (\"system\", cube_description),\n",
-    "    (\"system\", structure_description),\n",
-    "    (\"system\", sample_description),\n",
-    "    (\"human\", human_template),\n",
-    "])\n",
+    "# chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "#     (\"system\", cube_description),\n",
+    "#     (\"system\", structure_description),\n",
+    "#     (\"system\", sample_description),\n",
+    "#     (\"human\", human_template),\n",
+    "# ])\n",
     "\n",
-    "rdf_cube = \"<https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
+    "# rdf_cube = \"<https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
     "\n",
-    "sample_result = \"\"\"\n",
-    "@prefix schema: <http://schema.org/> .\n",
-    "@prefix qudt: <http://qudt.org/schema/qudt/> .\n",
-    "@prefix sh: <http://www.w3.org/ns/shacl#> .\n",
-    "@prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .\n",
-    "@prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .\n",
-    "@prefix cube: <https://cube.link/> .\n",
+    "# sample_result = \"\"\"\n",
+    "# @prefix schema: <http://schema.org/> .\n",
+    "# @prefix qudt: <http://qudt.org/schema/qudt/> .\n",
+    "# @prefix sh: <http://www.w3.org/ns/shacl#> .\n",
+    "# @prefix rdf: <http://www.w3.org/1999/02/22-rdf-syntax-ns#> .\n",
+    "# @prefix rdfs: <http://www.w3.org/2000/01/rdf-schema#> .\n",
+    "# @prefix cube: <https://cube.link/> .\n",
     "\n",
-    "<https://environment.ld.admin.ch/foen/ubd000502/4/observation/1421/alle%20THG/1999> a cube:Observation ;\n",
-    "   cube:observedBy <https://ld.admin.ch/office/VII.1.7> ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/sektorid> <https://environment.ld.admin.ch/vocabulary/ghg_emission_sectors_co2_ordinance/1421> ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/gas> <https://ld.admin.ch/cube/dimension/testdimension/test1> ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/jahr> \"1999\"^^<http://www.w3.org/2001/XMLSchema#gYear> ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/werte> 0.588 ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/hierachie> \"1421\" ;\n",
-    "   <https://environment.ld.admin.ch/foen/ubd000502/werteNichtGerundet> 0.5880504 .\n",
-    "\"\"\"\n",
+    "# <https://environment.ld.admin.ch/foen/ubd000502/4/observation/1421/alle%20THG/1999> a cube:Observation ;\n",
+    "#    cube:observedBy <https://ld.admin.ch/office/VII.1.7> ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/sektorid> <https://environment.ld.admin.ch/vocabulary/ghg_emission_sectors_co2_ordinance/1421> ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/gas> <https://ld.admin.ch/cube/dimension/testdimension/test1> ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/jahr> \"1999\"^^<http://www.w3.org/2001/XMLSchema#gYear> ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/werte> 0.588 ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/hierachie> \"1421\" ;\n",
+    "#    <https://environment.ld.admin.ch/foen/ubd000502/werteNichtGerundet> 0.5880504 .\n",
+    "# \"\"\"\n",
     "\n",
-    "chain = LLMChain(prompt=chat_prompt, llm=chat_model, callbacks=[handler])\n",
+    "# chain = LLMChain(prompt=chat_prompt, llm=chat_model, callbacks=[handler])\n",
     "\n",
-    "question = \"sum of emission of CO2 for industry and years between 2009 and 2011\"\n",
+    "# question = f\"emission of CO2 for industry and year 2009 for given cube {rdf_cube}\"\n",
     "\n",
-    "message = chain.invoke({\n",
-    "    \"rdf_cube\": rdf_cube,\n",
-    "    \"cube_structure\": cube_structure,\n",
-    "    \"sample_result\": sample_result,\n",
-    "    \"question\": question,\n",
-    "})\n",
+    "# message = chain.invoke({\n",
+    "#     \"rdf_cube\": rdf_cube,\n",
+    "#     \"cube_structure\": cube_structure,\n",
+    "#     \"sample_result\": sample_result,\n",
+    "#     \"question\": question,\n",
+    "# })\n",
     "\n",
     "\n",
-    "logger.info(message[\"text\"])\n",
+    "# logger.info(message[\"text\"])\n",
     "\n"
    ]
   },
@@ -280,7 +273,7 @@
     "\n",
     "chain = LLMChain(prompt=chat_prompt, llm=chat_model, callbacks=[handler])\n",
     "\n",
-    "question = \"sum of emission of CO2 for industry and years between 2009 and 2011\"\n",
+    "question = \"Give me query with prefixes for: sum of emission of CO2 for industry between year 2009 and 2011 for given cube <https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
     "\n",
     "message = chain.invoke({\n",
     "    \"dimensions_triplets\": dimensions_triplets,\n",
