first version of full pipeline with cube selection and query generation

--- a/playground/playground.ipynb
+++ b/playground/playground.ipynb
@@ -20,7 +20,9 @@
     "from loguru import logger\n",
     "from langchain.callbacks import FileCallbackHandler\n",
     "\n",
-    "logfile = \"output.log\"\n",
+    "temperature = 0.7\n",
+    "\n",
+    "logfile = f\"output1710_dialog_temp07.log\"\n",
     "logger.add(logfile, format=\"{message}\", colorize=False, enqueue=True)\n",
     "handler = FileCallbackHandler(logfile)"
    ]
@@ -155,7 +157,6 @@
     "cube:observation <https://environment.ld.admin.ch/foen/ubd000502/4/observation/14/SF6/2021>.\n",
     "​\n",
     "<https://environment.ld.admin.ch/foen/ubd000502/4/observation/14/SF6/2021> a cube:Observation ;\n",
-    "   cube:observedBy <https://ld.admin.ch/office/VII.1.7> ;\n",
     "   <https://environment.ld.admin.ch/foen/ubd000502/sektorid> <https://environment.ld.admin.ch/vocabulary/ghg_emission_sectors_co2_ordinance/14> ;\n",
     "   <https://environment.ld.admin.ch/foen/ubd000502/gas> <https://ld.admin.ch/cube/dimension/pol01air/pol14> ;\n",
     "   <https://environment.ld.admin.ch/foen/ubd000502/jahr> \"2021\"^^<http://www.w3.org/2001/XMLSchema#gYear> ;\n",
@@ -231,7 +232,7 @@
     "from langchain.chains import LLMChain\n",
     "from langchain.schema import HumanMessage\n",
     "\n",
-    "chat_model = ChatOpenAI(openai_api_key=OPENAI_API_KEY, model=\"gpt-3.5-turbo\", temperature=0.5)\n",
+    "chat_model = ChatOpenAI(openai_api_key=OPENAI_API_KEY, model=\"gpt-3.5-turbo\", temperature=temperature)\n",
     "\n",
     "structure_description = \"\"\"\n",
     "Dimensions labels:\n",
@@ -245,7 +246,7 @@
     "\n",
     "human_template = \"Give me query with prefixes for: {question}\"\n",
     "\n",
-    "chat_prompt = ChatPromptTemplate.from_messages([\n",
+    "chat_prompt1 = ChatPromptTemplate.from_messages([\n",
     "    (\"system\", sample_description),\n",
     "    (\"system\", structure_description),\n",
     "    (\"human\", human_template),\n",
@@ -271,18 +272,43 @@
     "#    <https://environment.ld.admin.ch/foen/ubd000502/werteNichtGerundet> 0.5880504 .\n",
     "# \"\"\"\n",
     "\n",
-    "chain = LLMChain(prompt=chat_prompt, llm=chat_model, callbacks=[handler])\n",
+    "chain1 = LLMChain(prompt=chat_prompt1, llm=chat_model, callbacks=[handler])\n",
+    "\n",
+    "ai_template = \"{ai_response}\"\n",
+    "additional_question = \"Filtering by cube {cube} is missing in the query. Please add it to the query.\"\n",
+    "\n",
+    "chat_prompt2 = ChatPromptTemplate.from_messages([\n",
+    "    (\"system\", sample_description),\n",
+    "    (\"system\", structure_description),\n",
+    "    (\"human\", human_template),\n",
+    "    (\"ai\", ai_template),\n",
+    "    (\"human\", additional_question),\n",
+    "])\n",
+    "chain2 = LLMChain(prompt=chat_prompt2, llm=chat_model, callbacks=[handler])\n",
     "\n",
     "question = \"Give me query with prefixes for: sum of emission of CO2 for industry between year 2009 and 2011 for given cube <https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
     "\n",
-    "message = chain.invoke({\n",
-    "    \"dimensions_triplets\": dimensions_triplets,\n",
-    "    \"cube_and_sample\": cube_and_sample,\n",
-    "    \"question\": question,\n",
-    "})\n",
+    "async def acall_chain():\n",
+    "    response = await chain1.ainvoke({\n",
+    "        \"dimensions_triplets\": dimensions_triplets,\n",
+    "        \"cube_and_sample\": cube_and_sample,\n",
+    "        \"question\": question,\n",
+    "    })\n",
+    "    ai_response = response['text']\n",
+    "    cube = \"<https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
     "\n",
+    "    if cube not in ai_response:\n",
+    "        response2 = await chain2.ainvoke({\n",
+    "            \"dimensions_triplets\": dimensions_triplets,\n",
+    "            \"cube_and_sample\": cube_and_sample,\n",
+    "            \"question\": question,\n",
+    "            \"ai_response\": ai_response,\n",
+    "            \"cube\": cube,\n",
+    "        })\n",
     "\n",
-    "logger.info(message[\"text\"])"
+    "        ai_response = response2['text']\n",
+    "\n",
+    "    return ai_response"
    ]
   },
   {
@@ -290,7 +316,70 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result = await acall_chain()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "logger.info(\"=======================================\")\n",
+    "logger.info(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# import asyncio\n",
+    "\n",
+    "# all_results = []\n",
+    "\n",
+    "# loops = 10\n",
+    "\n",
+    "# for i in range(loops):\n",
+    "#     print(f\"Loop {i}\")\n",
+    "#     tasks = list(acall_chain() for _ in range(3))\n",
+    "#     # tasks.append(asyncio.sleep(60, {\"text\": \"SLEEP\"}))\n",
+    "#     results = await asyncio.gather(*tasks)\n",
+    "#     all_results.extend(results)\n",
+    "#     await asyncio.sleep(60)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from collections import Counter\n",
+    "\n",
+    "\n",
+    "# api_results = list(r['text'] for r in all_results if r['text'] != \"SLEEP\")\n",
+    "\n",
+    "\n",
+    "# cube = \"<https://environment.ld.admin.ch/foen/ubd000502/4>\"\n",
+    "# condition = lambda s: cube in s\n",
+    "\n",
+    "# c = Counter(condition(r) for r in api_results)\n",
+    "# logger.info(f\"---------Queries with cubes: {c[True]}/{sum(c.values())} -----------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for r in api_results:\n",
+    "#     logger.info(\"==========================================================\")\n",
+    "#     logger.info(r)"
+   ]
   }
  ],
  "metadata": {
