--- a/playground/full_pipeline.ipynb
+++ b/playground/full_pipeline.ipynb
@@ -54,7 +54,7 @@
     "cube_selection_chain = create_cube_selection_chain(api_key=OPENAI_API_KEY, handler=handler, **cube_selection_settings)\n",
     "\n",
     "# question = f\"sum of emission of CO2 for industry between year 2009 and 2011\"\n",
-    "question = f\"get average of emission of Methane for transport between years 2007 and 2005\"\n",
+    "question = f\"average of emission of Methane for transport between years 2007 and 2005\"\n",
     "\n",
     "cube_selection_response = await cube_selection_chain.ainvoke({\n",
     "    \"cubes\": cubes,\n",
@@ -110,7 +110,7 @@
     "from lib import create_query_generation_chain\n",
     "\n",
     "query_generation_settings = {\n",
-    "    \"temperature\": 0.2,\n",
+    "    \"temperature\": 0.15,\n",
     "    \"top_p\": 0.1\n",
     "}\n",
     "\n",
