optimize query for sample

--- a/playground/full_pipeline.ipynb
+++ b/playground/full_pipeline.ipynb
@@ -98,7 +98,7 @@
    "source": [
     "dimensions_triplets = fetch_dimensions_triplets(selected_cube)\n",
     "\n",
-    "# print(dimenstions_triplets)"
+    "# print(dimensions_triplets)"
    ]
   },
   {
