--- a/playground/full_pipeline.ipynb
+++ b/playground/full_pipeline.ipynb
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -50,18 +50,14 @@
       "WARNING! top_p is not default parameter.\n",
       "                    top_p was transferred to model_kwargs.\n",
       "                    Please confirm that top_p is what you intended.\n",
-      "\u001b[32m2025-01-15 17:34:37.476\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m29\u001b[0m - \u001b[1m========== CUBES RESPONSE ================\u001b[0m\n",
-      "\u001b[32m2025-01-15 17:34:37.478\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m30\u001b[0m - \u001b[1mTo answer the question regarding Swiss bathing stations with poor water quality in 2024, the relevant cube is:\n",
+      "\u001b[32m2025-01-15 17:39:05.579\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m29\u001b[0m - \u001b[1m========== CUBES RESPONSE ================\u001b[0m\n",
+      "\u001b[32m2025-01-15 17:39:05.581\u001b[0m | \u001b[1mINFO    \u001b[0m | \u001b[36m__main__\u001b[0m:\u001b[36m<module>\u001b[0m:\u001b[36m30\u001b[0m - \u001b[1mThe cube that best answers the question about maximum contamination in lead in soil in 2022 is:\n",
       "\n",
-      "- **Cube ID**: <https://environment.ld.admin.ch/foen/ubd01041prod/4>\n",
-      "  - **Name**: \"Bathing water quality\"\n",
-      "  - **Description**: \"The assessment of bathing waters is made on the basis of hygienic quality using E.coli and intestinal enterococci. They provide indications on the effectiveness of water protection measures and in particular the extent to which waste water treatment plants are fulfilling their function.\"\n",
+      "**Cube ID:** <https://environment.ld.admin.ch/foen/ubd006601/3>\n",
       "\n",
-      "This cube is relevant because it specifically addresses the quality of bathing waters, which is directly related to the question about poor water quality at Swiss bathing stations.\n",
+      "**Justification:** This cube is titled \"Heavy Metal Soil Contamination\" and contains measurement data of heavy metal concentrations, which would include lead, recorded in the top 20 cm of the soil. While the specific year 2022 is not mentioned, it is reasonable to assume that the data collected in this cube would provide relevant information regarding lead contamination in soil.\n",
       "\n",
-      "For the second part of the question regarding average contamination in plomb (lead) in soil in 2022, there is no cube provided in the data that specifically addresses soil contamination or plomb levels in 2022. Therefore, I cannot provide a cube ID for that part of the question.\n",
-      "\n",
-      "### Available Topics in the Cubes:\n",
+      "**Available Topics in the Cubes:**\n",
       "- Forest fire danger\n",
       "- Forest fire prevention measures\n",
       "- NFI: Change\n",
@@ -104,9 +100,7 @@
       "- NFI: Topics by tree condition\n",
       "- CO2 emissions from thermal fuels (corrected for weather conditions) and motor fuels\n",
       "- Heavy Metal Soil Contamination\n",
-      "- Red List\n",
-      "\n",
-      "In conclusion, the cube ID for bathing water quality is provided, but there is no cube available for plomb contamination in soil for 2022.\u001b[0m\n"
+      "- Red List\u001b[0m\n"
      ]
     }
    ],
@@ -127,7 +121,7 @@
     "\"What percentage of emission was from N2O and CH4 compared to total emission?\",\n",
     "\"what bathing stations are in switzerland?\",\n",
     "\"what swiss bathing stations had poor water quality in 2024?\",\n",
-    "\"what is average contamination in plomb in soil in 2022?\",\n",
+    "\"what is maximum contamination in lead in soil in 2022?\",\n",
     "\"what's for lunch\"]\n",
     "\n",
     "question=questions[-2]\n",
@@ -145,16 +139,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'what bathing stations are in switzerland?'"
+       "'what is average contamination in plomb in soil in 2022?'"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
